# DjangoProject

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml
DjangoProject/: settings.py  urls.py
WebProject/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
WebProject/migrations/: 0001_initial.py  0002_initial.py  0002_wallet_amount.py
WebProject/templates/: add_funds.html  base.html  dashboard.html  dashboard_cash.html  dashboard_wallet.html  edit_profile.html  home.html  landing.html  my_profile.html  transfer_funds.html
WebProject/templates/dashboard/: cash.html  side_panel.html  wallet.html
WebProject/templates/operations/: buy.html  sell.html
WebProject/templates/profile/: edit_profile.html  my_profile.html
WebProject/templates/transactions/: add_funds.html  transaction_detail.html  transfer_detail.html  transfer_funds.html
api/: urls.py  views.py
features/: add_funds.feature  login.feature  register.feature  transfer_funds.feature
features/steps/: add_funds.steps.py  login.steps.py  register.steps.py  transfer_funds.steps.py
scripts/: import_dataset.py  import_dataset_shortcut.py
static/css/: auth.css  home.css  style.css
templates/: auth.html  base.html
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_customuser.py
users/templates/: auth.html  login.html  registration.html  signup.html
users/templates/users/: login.html
