[project]
name = "XChange"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric Gil", email = "egc20@alumnes.udl.cat"},
    {name = "Oleksandr Mudryk", email = "om4@alumnes.udl.cat"},
    {name = "Valentí Martín", email = "vms7@alumnes.udl.cat"},
    {name = "Pau Coll", email = "pcX@alumnes.udl.cat"},
    {name = "Alexandru Porosnicu", email = "apX@alumnes.udl.cat"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "behave (>=1.2.6,<2.0.0)",
    "splinter (>=0.21.0,<0.22.0)",
    "selenium (>=4.32.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
