[project]
name = "XChange"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric Gil", email = "egc20@alumnes.udl.cat"},
    {name = "Oleksandr Mudryk", email = "om4@alumnes.udl.cat"},
    {name = "Valentí Martín", email = "vms7@alumnes.udl.cat"},
    {name = "Pau Coll", email = "pcX@alumnes.udl.cat"},
    {name = "Alexandru Porosnicu", email = "apX@alumnes.udl.cat"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
]